debian-installer (20051031) UNRELEASED; urgency=low

  [ Stephen R. Marenka ]
  * Added amiboot dependency for m68k.

  [ Kurt Roeckx ]
  * Stop building the monolithic target on amd64.

 -- Stephen R. Marenka <smarenka@debian.org>  Mon, 31 Oct 2005 10:54:50 -0600

debian-installer (20051026) unstable; urgency=low

  [ Joey Hess ]
  * Add cramfsprogs dependency for mipsel. Closes: #334780
  * Syslinux ignores failures due to being out of disk space (#335152).
    Avoid this bug by running syslinux on the original, empty disk
    image.
  * If the boot logo can't be copied onto a floppy, don't fail, just proceed
    on without a boot logo. Yes, we're that short on space on the i386 boot
    floppies, no more logos for them until space is freed up.
  * Deal with changed case of Kernel-Version fields in stat generation code.

  [ Colin Watson ]
  * Improve wording of debian-installer binary package description.

 -- Joey Hess <joeyh@debian.org>  Wed, 26 Oct 2005 18:55:45 -0400

debian-installer (20051018) unstable; urgency=low

  [ dann frazier ]
  * Workaround #326103 by using mklibs-copy instead of mklibs on ia64.

  [ Colin Watson ]
  * Drop hotplug-udeb from udev package list; udev-udeb is sufficient now
    that coldplugging support has been added to it.
  * Build mini.iso images for powerpc and powerpc64 netboot.

 -- Joey Hess <joeyh@debian.org>  Tue, 18 Oct 2005 15:57:35 -0400

debian-installer (20051017) unstable; urgency=low

  * No source changes, will catch new i386 kernel udebs that fix usb install
    issue.

 -- Joey Hess <joeyh@debian.org>  Mon, 17 Oct 2005 19:45:50 -0400

debian-installer (20051014) unstable; urgency=low

  * Use cramfs images on mipsel. Current mipsel binaries compress very well.
    Needs newest mipsel kernel udebs.
  * Drop EXTRALIBS. Use EXTRAFILES, code was the same, and it's not used
    otherwise.
  * Copy in EXTRAFILES before depmod so modules can be included if necessary.