@@ -380,10 +380,13 @@ ifneq (,$(wildcard $(KEYRING)))
 endif
 
 	# Create an lsb release file.
-	mkdir -p $(TREE)/etc
-	echo 'DISTRIB_ID=$(LSB_DISTRIB_ID)' > $(TREE)/etc/lsb-release
-	echo 'DISTRIB_DESCRIPTION=$(LSB_DISTRIB_DESCRIPTION)' >> $(TREE)/etc/lsb-release
-	echo 'DISTRIB_RELEASE=$(LSB_DISTRIB_RELEASE)' >> $(TREE)/etc/lsb-release
+	if [ ! -e $(TREE)/etc/lsb-release ]; then \
+		set -e; \
+		mkdir -p $(TREE)/etc; \
+		echo 'DISTRIB_ID=$(LSB_DISTRIB_ID)' > $(TREE)/etc/lsb-release; \
+		echo 'DISTRIB_DESCRIPTION=$(LSB_DISTRIB_DESCRIPTION)' >> $(TREE)/etc/lsb-release; \
+		echo 'DISTRIB_RELEASE=$(LSB_DISTRIB_RELEASE)' >> $(TREE)/etc/lsb-release; \
+	fi
 
 	@touch $@
 
